// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crime Stats Matches Snapshot 1`] = `
<div
  className="crime-stats"
>
  <div
    className="total-crimes"
  >
    <p>
      Total Crimes 
      3
    </p>
    <input
      name="sort"
      onChange={[Function]}
      type="radio"
      value="location"
    />
    <p>
      Location Sort
    </p>
    <input
      name="sort"
      onChange={[Function]}
      type="radio"
      value="outcome"
    />
    <p>
      Outcome Sort
    </p>
  </div>
  <div
    className="results-table"
  >
    <div
      className="stat-row"
    >
      <span
        className="result-category"
      >
        ccc Mock Category 1
      </span>
      <span
        className="result-location"
      >
        aaa Mock Street 1
      </span>
      <span
        className="result-outcome"
      >
        ccc Mock Outcome 1
      </span>
    </div>
    <div
      className="stat-row"
    >
      <span
        className="result-category"
      >
        bbb Mock Category 2
      </span>
      <span
        className="result-location"
      >
        ccc Mock Street 2
      </span>
      <span
        className="result-outcome"
      >
        bbb Mock Outcome 2
      </span>
    </div>
    <div
      className="stat-row"
    >
      <span
        className="result-category"
      >
        aaa Mock Category 3
      </span>
      <span
        className="result-location"
      >
        bbb Mock Street 3
      </span>
      <span
        className="result-outcome"
      >
        aaa Mock Outcome 3
      </span>
    </div>
  </div>
</div>
`;

exports[`Map Crime Results Matches Snapshot 1`] = `
Array [
  <div
    className="stat-row"
  >
    <span
      className="result-category"
    >
      ccc Mock Category 1
    </span>
    <span
      className="result-location"
    >
      aaa Mock Street 1
    </span>
    <span
      className="result-outcome"
    >
      ccc Mock Outcome 1
    </span>
  </div>,
  <div
    className="stat-row"
  >
    <span
      className="result-category"
    >
      bbb Mock Category 2
    </span>
    <span
      className="result-location"
    >
      ccc Mock Street 2
    </span>
    <span
      className="result-outcome"
    >
      bbb Mock Outcome 2
    </span>
  </div>,
  <div
    className="stat-row"
  >
    <span
      className="result-category"
    >
      aaa Mock Category 3
    </span>
    <span
      className="result-location"
    >
      bbb Mock Street 3
    </span>
    <span
      className="result-outcome"
    >
      aaa Mock Outcome 3
    </span>
  </div>,
]
`;

exports[`Sort Crimes Matches Snapshot 1`] = `
<div
  className="total-crimes"
>
  <p>
    Total Crimes 
    1337
  </p>
  <input
    name="sort"
    onChange={[Function]}
    type="radio"
    value="location"
  />
  <p>
    Location Sort
  </p>
  <input
    name="sort"
    onChange={[Function]}
    type="radio"
    value="outcome"
  />
  <p>
    Outcome Sort
  </p>
</div>
`;
